--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.15.4",
     "gm": "^1.23.0",
-    "jimp": "^0.2.28"
+    "jimp": "^0.2.28",
+    "nodemailer": "^4.1.1"
   }
 }
